# docs/swagger.yaml
@@ -1,7 +1,7 @@
 definitions:
-  controllers.message:
+  errorhandling.ErrorMessage:
     properties:
-      message:
+      error:
         type: string
     type: object
   models.Event:
@@ -22,6 +22,9 @@ definitions:
         type: string
       title:
         type: string
+    required:
+    - category
+    - title
     type: object
 externalDocs:
   description: OpenAPI
@@ -95,7 +98,7 @@ paths:
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/controllers.message'
+            $ref: '#/definitions/errorhandling.ErrorMessage'
       summary: Delete Event
       tags:
       - events
@@ -119,7 +122,7 @@ paths:
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/controllers.message'
+            $ref: '#/definitions/errorhandling.ErrorMessage'
       summary: Get Event
       tags:
       - events
@@ -149,7 +152,7 @@ paths:
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/controllers.message'
+            $ref: '#/definitions/errorhandling.ErrorMessage'
       summary: SubstituteEvent
       tags:
       - events
